[package]
name = "crio"
version = "2.0.2"
edition = "2021"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
license = "MIT"
description = "An easy to use persistent data storage library"
readme = "README.md"
documentation = "https://docs.rs/crio"
homepage = "https://github.com/tropicbliss/crio"
repository = "https://github.com/tropicbliss/crio"
keywords = ["storage", "persistent", "data"]
categories = ["data-structures"]

[dependencies]
bincode = "1.3"
byteorder = "1.4"
crc = "3.0"
flate2 = "1.0.24"
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
serde_derive = "1.0"
